--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -17,12 +17,12 @@
 
 
         <!-- Insert header -->
-        <nav th:insert="~{shared/header :: header}"
-             th:with="href1='/index#home', href2='/index#about', href3='#/indexservices', href4='#/index#contact', href5='#login', href6='/index#contact', home_active='', login_active=' active', login_text='Logged In'"></nav>
+        <nav th:insert="~{shared/header-logged-in :: header}"
+             th:with="href1='/index#home', href2='/index#about', href3='/index#services', href4='/index#contact', href5='#login', tref7='Log Out', home_active='', login_active=' active', login_text='Logged In'"></nav>
 
 
         <!-- Page Header Start -->
-        <div class="container-fluid page-header my-5 mt-0 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid page-header my-5 mt-0 wow fadeIn" id="admin-header" data-wow-delay="0.1s">
             <div class="container text-center">
                 <h1 class="display-4 text-white animated slideInDown mb-4">Admin</h1>
             </div>
@@ -43,7 +43,7 @@
                             </div>
 
                             <div class="bg-primary text-center p-5">
-                                <h1 class="mb-4">Enquiry</h1>
+                                <h1 class="mb-4">Contact</h1>
                                 <!-- forms -->
                                 <!-- 'novalidate' disables browser validate check (bootstrap to validate)
                                       action = where form data is submitted
@@ -163,7 +163,7 @@
 
         <!-- Custom Javascript -->
         <script th:src="@{/js/main.js}"></script>
-        <script th:src="@{/js/invoice.js}"></script>
+        <script th:src="@{/js/logout.js}"></script>
     </div>
 </body>
 </html>
