--- a/src/main/resources/templates/shared/header-logged-in.html
+++ b/src/main/resources/templates/shared/header-logged-in.html
@@ -1,4 +1,4 @@
-<!-- Header Start -->
+<!-- Navbar Start -->
 <nav th:fragment="header" class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
     <div class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
         <img th:src="@{image/man.png}" class="d-inline-block align-top logo" alt="">
@@ -13,9 +13,16 @@
             <a href="#about" data-th-href="${href2}" class="nav-item nav-link">About</a>
             <a href="#services" data-th-href="${href3}" class="nav-item nav-link">Services</a>
             <a href="#contact" data-th-href="${href4}" class="nav-item nav-link">Contact</a>
-            <a href="login.html" data-th-href="${href5}" class="nav-item nav-link" th:classappend="${login_active}" th:text="${login_text}"></a>
+            <a href="login.html" data-th-href="${href5}" class="nav-item nav-link" th:classappend="${login_active}"
+               th:text="${login_text}"></a>
         </div>
-        <a href="#contact" data-th-href="${href6}" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block" th:text="${tref7}">h<i class="fa fa-arrow-right ms-3"></i></a>
+        <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+            <input type="submit" value="logout"/>
+        </form>
+        <a id="logoutLink" href="javascript: document.logoutForm.submit()" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"
+           th:text="${tref7}">
+            <i class="fa fa-arrow-right ms-3"></i>
+        </a>
     </div>
 </nav>
-<!-- Header End -->
+<!-- Navbar End -->
